--- a/mystyles.css
+++ b/mystyles.css
@@ -12,7 +12,7 @@
  }
 
  header {
- 	background-image: url("header.png");
+ 	background-image: url("pictures/header.png");
  	display: flex;
  	justify-content: space-between;
  	padding: 40px;
@@ -50,7 +50,7 @@ h2 {
 }
 
 nav ul li:before {
-	content: url("computer.png");
+	content: url("pictures/computer.png");
 	margin-right: 5px;
 }
 
